tests/int/snapshots/r#mod__int__command__flag_help.snap
---
source: tests/int/command.rs
info:
  program: crawk
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Analyze Rust module dependencies and structure

crawk analyzes your Rust codebase and reveals every module dependency — not
just `use` statements, but every type annotation, trait bound, struct literal,
and macro invocation that ties your code together.

Usage: crawk [OPTIONS] <COMMAND>

Commands:
  use   Analyze a module and list its internal crate `use` statements
  help  Print this message or the help of the given subcommand(s)

Options:
  -p, --path <PATH>
          Specify path to the crate root directory (defaults to current directory)

  -v, --verbose...
          Increase output verbosity (-v for info, -vv for debug)

  -l, --log-file <LOG_FILE>
          Write logs to specified file (INFO level, or DEBUG with -vv)

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Run 'crawk --help' for full help message.
Run 'crawk COMMAND --help' for more information on a command.

For more about the tool head to https://github.com/BartoszCiesla/crawk

Built on [TIMESTAMP] for [TARGET] ([RUSTC]) by [USER]

----- stderr -----
