tests/int/snapshots/r#mod__int__command__should_command_overview_match.snap
---
source: tests/int/command.rs
info:
  program: crawk
  args: []
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Analyze Rust module dependencies and structure

Usage: crawk [OPTIONS] <COMMAND>

Commands:
  use   Analyze a module and list its internal crate `use` statements
  help  Print this message or the help of the given subcommand(s)

Options:
  -p, --path <PATH>  Specify path to the crate root directory (defaults to current directory)
  -v, --verbose      Show additional information about the analysis
  -h, --help         Print help (see more with '--help')
  -V, --version      Print version

Run 'crawk --help' for full help message.
Run 'crawk COMMAND --help' for more information on a command.
